<resources>
    <string name="app_name">Kebab Order</string>
    <string name="logo_description">KebabBar logo</string>
    <string name="welcome">WELCOME</string>
    <string name="hint_name">Enter Your name</string>
    <string name="hint_password">Enter password</string>
    <string name="button_get_order">GET ORDER</string>
    <string name="toast_name">Please enter Your name</string>
    <string name="toast_password">Please enter Your password</string>
    <string name="delivery">Chose delivery…</string>
    <string name="at_home">At home</string>
    <string name="at_our_place">At our place</string>
    <string name="eat_place">Where do You gonna eat ?</string>
    <string name="separately">Fries separately</string>
    <string name="hot">Hot(Jalapeno)</string>
    <string name="sauсe">Sauсe</string>
    <string name="extras">%s additions…</string>
    <string name="free">Free +</string>
    <string name="dener">Dener</string>
    <string name="shaurma">Shaurma</string>
    <string name="hello">Hi, %s! What do You order ?</string>
    <string name="default_name">Client</string>
    <string name="default_password">123</string>
    <string name="additions_added">\nNeeded additions: \n</string>
    <string name="textViewOrder">TextView</string>
    <string name="order2">Name: %s\nPassword: %s\nFood: %s\n</string>
    <string name="delivery_option">\nDelivery option : \n</string>

    <string-array name="deliverersList">
        <item>Bolt</item>
        <item>Wolt</item>
        <item>CityBee</item>
        <item>CrazyCooler</item>
    </string-array>

    <string-array name="deliverersListFree">
        <item>Free+Deliverers</item>
        <item>GrandmothersHelpers</item>
    </string-array>
</resources>
