<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark">


    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo"
        tools:src="@drawable/logo"
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_name"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="30dp"/>

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="30dp"
        android:password="true"/>
    <Button
        android:id="@+id/button_createOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_get_order"
        android:textSize="24sp"
        android:background="@color/dark"
        android:textColor="@color/black"
        android:onClick="onClickCreateOrder"/>
</LinearLayout>